--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-google-oauth2": "^1.5.10",
     "vue-router": "^4.0.3",
     "vue3-google-login": "^2.0.25",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
